frontend/src/css/table.css
table {
  border-collapse: collapse;
}

table, thead, tbody, th, td, tr {
  display: block;
}

th .icon {
  height: 0.6em;
  width: 1.2em;
  margin: 0 0.5em;
}

tr:nth-child(even) {
  background-color: var(--table-even-row-color);
}

th, td {
  text-align: center;
  padding: 0 1rem 0 0;
}

thead, tr {
  display: grid;
  grid-template-rows: auto auto;
  border-bottom: 2px solid black;
}

thead {
  position: sticky;
  top: 0px;
  background-color: var(--body-background-color);
}

th {
  background-color: var(--body-background-color);
}

td.thumbnail {
  img {
    height: 4em;
  }
}

@media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px)  {
  /* Hide table headers (but not display: none;, for accessibility) */
  thead tr {
    position: absolute;
    top: -9999px;
    left: -9999px;
  }
}

.events {
  table {
    margin: 0 5vw;
  }

  thead, tr {
    grid-template-columns: repeat(5, 1fr)
  }
}

.game_create {
  /* Hide table headers (but not display: none;, for accessibility) */
  table {
    margin-bottom: 1em
  }

  thead {
    position: absolute;
    top: -9999px;
    left: -9999px;
  }
  td {
    padding: 0.4vmax
  }
  td.image {
    grid-area: 1/1/2/2;
  }
  td.name {
    grid-area: 2/1/3/2;
    font-weight: bolder;
  }
  td.description {
    text-align: justify;
    grid-area: 1/2/3/3;
  }
  td.pick {
    grid-area: 3/1/4/4;
  }
}

.games {
  th.pitch {
    display: none;
    visibility: hidden;
  }
  td.pitch {
    text-align: left;
    p {
      text-align: left;
    }
    &.present {
      border-bottom: 1px dotted gray;
    }
    &.absent {
      padding: 0;
      margin: 0;
      height: 0;
    }
  }

  @media only screen and (min-width: 760px)  {
    thead, tr {
      /*                     thumb name  mMplay int tchr dur  my   tool   notes */
      grid-template-columns: 2fr 4fr repeat(4, 1fr) 2fr 3fr 4fr 4fr;
    }
    thead {
      place-items: stretch;
    }
    td.pitch {
      grid-area: 1 / 1 / 1 / 11;
      justify-content: center;
      padding: 1em 3em;
    }
    .thumbnail  { grid-column: 1; }
    .game       { grid-column: 2; }
    .minplayers    { grid-column: 3; }
    .maxplayers    { grid-column: 4; }
    .duration     { grid-column: 5; }
    .interested { grid-column: 6; }
    .teachers   { grid-column: 7; }
     /* pitch */
    .me {
      grid-column: 8;
      justify-self: center;
    }
    .tools {
      grid-column: 9;
      div {
        flex-direction: row;
        justify-content: center;
      }
    }
    .notes {  grid-column: 10; }
    td.whoelse:not(.empty) {
      text-align: right;
      position: fixed;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      background-color: white;
      border: 2px solid black;
      border-radius: 0.5em;
      padding: 1.2em;

      ul {
        text-align: left;
        padding-inline-start: 2em
      }

      h3 {
        margin: 0.2em
      }
    }
  }

  @media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px)  {
    thead {
      position: absolute;
      top: -9999px;
      left: -9999px;
    }

    tr {
      margin: 0 0 1rem 0;
      grid-template-columns: 3fr 2fr;
      grid-template-rows: auto;
      place-items: stretch;
    }


    td {
      margin-bottom: 2px;
    }

    td.pitch {
      grid-area: 1 / 1 / 1 / 3;
      text-align: justify;
      max-height: 5em;
      overflow: auto;
      &.present {
        padding: 1em;
      }
    }
    td.thumbnail, td.game {
      grid-column: 1;
    }
    td.thumbnail {
      grid-row: 2 / span 3
    }
    td.game {
      grid-row: 5
    }
    td.minplayers, td.maxplayers, td.length, td.interest-level, td.teachers {
      grid-column: 2;
    }
    td.minplayers {
      grid-row: 2;
      &::before { content: "Min:"; }
    }
    td.maxplayers {
      grid-row: 3;
      &::before { content: "Max: "; }
    }
    td.duration {
      grid-row: 4;
      &::after { content: " minutes"; }
    }
    td.interest-level {
      grid-row: 5;
      &::before { content: "Interested: "; }
    }
    td.teachers {
      grid-row: 6;
      &::before { content: "Know rules: "; }
    }
    td.me {
      grid-area: 7/ 1 / 8 / 3;
      justify-self: center;
    }
    td.tools {
      grid-area: 8 / 1 / 9 / 3;
      div {
        flex-direction: row;
        justify-content: center;
      }
    }
    td.notes {
      grid-area: 10 / 1 / 10 / 3;
    }
  }
}


.whatshouldweplay {
  thead, tr {
    grid-template-columns: repeat(8, 1fr);
    place-items: center;
  }
  td.image {
    min-height: 4em;
    img {
      height: 4em;
    }
  }
  td.whoelse-list {
    text-align: right;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: white;
    border: 2px solid black;
    border-radius: 0.5em;
    padding: 1.2em;

    ul {
      text-align: left;
      padding-inline-start: 2em
    }

    h3 {
      margin: 0.2em
    }
  }
  td.empty.whoelse {
    position: absolute;
    display: none;
  }
  @media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px)  {
    thead {
      position: absolute;
      top: -9999px;
      left: -9999px;
    }

    tr {
      margin: 0 0 1rem 0;
      grid-template-columns: 3fr 2fr;
      grid-template-rows: auto;
      place-items: stretch;
    }

    td.image, td.name {
      grid-column: 1;
    }

    td.image {
      grid-row: 1 / span 2;
    }
    td.name {
      grid-row: 3;
    }
    td.players, td.length, td.interested, td.teachers, td.added {
      grid-column: 2;
    }
    td.players {
      grid-row: 1;
      &::after { content: " Players"; }
    }
    td.length {
      grid-row: 2;
      &::after { content: " Minutes"; }
    }
    td.interested {
      grid-row: 3;
      &::before { content: "Interested: "; }
    }
    td.teachers {
      grid-row: 4;
      &::before { content: "Know rules: "; }
    }

    td.whoelse-button {
      grid-column: 1 / span 3;
      grid-row: 5
    }
  }
}

